# data-analytics-project-100

./: Dashboard_Convertion.ipynb  Def_project3.ipynb  Def_project3.py  README.md  ads.json  charts_project.ipynb  conversion.json  pyproject.toml
hexlet-code/: .env  ads.json  conversion.json  main.py  package-lock.json  pyproject.toml
