[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Oksana Letner <oksana.letner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
numpy = "^1.26.2"
python-dotenv = "^0.21.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
main = "main:run_all"